tests/build/fail/widget_new/missing_required.stderr
error: missing required property `foo`
  --> $DIR/missing_required.rs:17:13
   |
17 |       let _ = test_widget! {
   |  _____________^
18 | |         // foo = true;
19 | |     };
   | |_____^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
